{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 960,
  "lineage": "5a5e5668-581b-1007-e3e7-03d4094350f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:internet-gateway/igw-0c984338b4cbf0660",
            "id": "igw-0c984338b4cbf0660",
            "owner_id": "505085077337",
            "tags": {
              "Name": "emr-gateway"
            },
            "tags_all": {
              "Name": "emr-gateway"
            },
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:route-table/rtb-0840f2adbb8d8943f",
            "id": "rtb-0840f2adbb8d8943f",
            "owner_id": "505085077337",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c984338b4cbf0660",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "emr-route-table"
            },
            "tags_all": {
              "Name": "emr-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0005b1f581d30bf73",
            "route_table_id": "rtb-0840f2adbb8d8943f",
            "subnet_id": "subnet-065a5982b706b5678"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_editor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group/sg-08a6c2f7b783a78f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07decb1f235646a26"
                ],
                "self": false,
                "to_port": 63535
              }
            ],
            "id": "sg-08a6c2f7b783a78f3",
            "ingress": [],
            "name": "terraform-20240708152030096300000005",
            "name_prefix": "terraform-",
            "owner_id": "505085077337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "emre-editor"
            },
            "tags_all": {
              "Name": "emre-editor"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.emr_master_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group/sg-07decb1f235646a26",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07decb1f235646a26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240708152025662500000002",
            "name_prefix": "terraform-",
            "owner_id": "505085077337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "emr-10-master-sg"
            },
            "tags_all": {
              "Name": "emr-10-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group/sg-0099b1bcc6e73b216",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0099b1bcc6e73b216",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240708152025667200000003",
            "name_prefix": "terraform-",
            "owner_id": "505085077337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "emr-10-slave-sg"
            },
            "tags_all": {
              "Name": "emr-10-slave-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "engine_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group/sg-07ecee65f942fa061",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ecee65f942fa061",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 18888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5aa00fef64ec17c"
                ],
                "self": false,
                "to_port": 18888
              }
            ],
            "name": "terraform-20240708160617334300000002",
            "name_prefix": "terraform-",
            "owner_id": "505085077337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "emr-10-emrs-engine-sg"
            },
            "tags_all": {
              "Name": "emr-10-emrs-engine-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.workspace_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workspace_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group/sg-0d5aa00fef64ec17c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 18888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07ecee65f942fa061"
                ],
                "self": false,
                "to_port": 18888
              }
            ],
            "id": "sg-0d5aa00fef64ec17c",
            "ingress": [],
            "name": "terraform-20240708160613744800000001",
            "name_prefix": "terraform-",
            "owner_id": "505085077337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "emr-10-emrs-ws-sg"
            },
            "tags_all": {
              "Name": "emr-10-emrs-ws-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:subnet/subnet-065a5982b706b5678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065a5982b706b5678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505085077337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "emr-10-subnet"
            },
            "tags_all": {
              "Name": "emr-10-subnet"
            },
            "vpc_id": "vpc-08b26aa7127c5be6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:vpc/vpc-08b26aa7127c5be6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0226fdb792b48b75b",
            "default_route_table_id": "rtb-0aad7b83193ff871f",
            "default_security_group_id": "sg-066754336826af862",
            "dhcp_options_id": "dopt-91c5cdf3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b26aa7127c5be6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aad7b83193ff871f",
            "owner_id": "505085077337",
            "tags": {
              "Name": "emrvpc01"
            },
            "tags_all": {
              "Name": "emrvpc01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "workspace_2_engine_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group-rule/sgr-0f50ce248a23f38e2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 18888,
            "id": "sgr-0f50ce248a23f38e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07ecee65f942fa061",
            "security_group_id": "sg-0d5aa00fef64ec17c",
            "security_group_rule_id": "sgr-0f50ce248a23f38e2",
            "tags": {
              "Name": "egress-2-emre-engine"
            },
            "tags_all": {
              "Name": "egress-2-emre-engine"
            },
            "to_port": 18888
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.engine_sg",
            "aws_security_group.workspace_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_master_2_editor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:505085077337:security-group-rule/sgr-0b758a8c371bcc541",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0b758a8c371bcc541",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08a6c2f7b783a78f3",
            "security_group_id": "sg-07decb1f235646a26",
            "security_group_rule_id": "sgr-0b758a8c371bcc541",
            "tags": {
              "Name": "igress-2-emre-editor"
            },
            "tags_all": {
              "Name": "igress-2-emre-editor"
            },
            "to_port": 63535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.emr_editor",
            "aws_security_group.emr_master_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}